// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`RefreshTimeButton should render a basic component: basic 1`] = `
<Button
  variant="link"
  icon={<RebootingIcon />}
  onClick={[Function]}
  ouiaId="refresh"
>
  <span
  className="last-refresh-time"
>
  "t([
  "refresh-time-button.refreshed",
  {
    "context": "load",
    "refresh": "7 days ago"
  }
])"
</span>
</Button>
`;

exports[`RefreshTimeButton should render component without refresh time set: no refresh set 1`] = `
<Button
  variant="link"
  icon={<RebootingIcon />}
  onClick={[Function]}
  ouiaId="refresh"
>
  <span
  className="last-refresh-time"
>
  "t([
  "refresh-time-button.refreshed",
  {}
])"
</span>
</Button>
`;
